# spending-tracker

./: .gitignore  LICENSE  README.md  compose.yaml  docker-compose.yaml
backend/: Dockerfile  pyproject.toml
backend/app/: bank_statement_parser.py  config.py  main.py  transactions_service.py
backend/app/api/: dependencies.py
backend/app/api/reports/: models.py  routes.py
backend/app/api/rules/: models.py  routes.py
backend/app/db/: base.py
backend/app/db/reports/: models.py  repository.py
backend/app/db/rules/: models.py  repository.py
backend/migrations/: env.py
backend/migrations/versions/: 053660a0e682_initial_migration.py  127d5718371c_initial_migration.py  52c901f38474_remove_denormalized_category_name_and_.py  e775d573c2bb_add_denormalized_category_name_and_.py
frontend/: Dockerfile  eslint.config.js  package-lock.json  package.json  tsconfig.app.json
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: AddToFilterModal.tsx  AddToReportLineModal.tsx  CreateCategoryModal.tsx  CreateFilterModal.tsx  CreateReportModal.tsx  DeleteFilterModal.tsx  EditFilterModal.tsx  IdentifiedTransaction.tsx  IdentifiedTransactionsDisplay.tsx  MainSection.tsx  Reports.tsx  RuleFormGroup.tsx  Rules.tsx  RulesCategory.tsx  RulesFilter.tsx  RulesRuleGroup.tsx  SideBar.tsx  UnidentifiedTransactionsDisplay.tsx
frontend/src/contexts/: ModalContext.tsx  ReportsContext.tsx  RulesContext.tsx
frontend/src/hooks/: useFilterForm.ts  useModal.ts  useReports.ts  useRules.ts
frontend/src/lib/Modal/: Modal.css  Modal.tsx
frontend/src/services/: api.types.ts
frontend/src/services/reports/: api.parser.ts  api.types.parsed.ts  apiService.parser.ts  apiService.ts
frontend/src/services/rules/: api.parser.ts  api.types.parsed.ts  apiService.parser.ts  apiService.ts
scripts/: backup-db.sh  restore-db.sh
